--- a/styles/index.css
+++ b/styles/index.css
@@ -1,130 +1,3 @@
-body {
-    margin: 0px;
-}
-
-#left {
-    width: 50%;
-    height: 927px;
-    background-color: lightyellow;
-    float: left;
-}
-
-#right {
-    width: 50%;
-    height: 927px;
-    background-color: #36454f;
-    float: right;
-}
-
-h1, h2 {
-    margin-left: 4%;
-    color: white;
-}
-
-#smallLogo {
-    width: 10%;
-    margin-left: 4%;
-    margin-top: 25%;
-}
-
-#largeLogo {
-    width: 50%;
-    margin: 23%;
-    margin-top: 20%;
-}
-
-h1 {
-    font-size: 60px;
-}
-
-h2 {
-    font-size: 35px;
-}
-
-#login, #signup {
-    background-color: #36454f;
-    text-decoration: none;
-    color: lightyellow;
-    font-size: 20px;
-    border-radius: 25px;
-    border: 2px solid lightyellow;
-    margin-top: 30px;
-    margin-left: 6%;
-    padding-left: 160px;
-    padding-right: 160px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-#login:hover, #signup:hover {
-    color: #36454f;
-    background-color: lightyellow;
-}
-
-#login {
-    padding-right: 170px;
-}
-
-#loginBox {
-    background-color: lightyellow;
-    color: #36454F;
-    margin-left: 4%;
-    padding-left: 3%;
-    border-radius: 15px;
-    width: 400px;
-}
-
-#loginBox h3 {
-    font-size: 20px;
-    padding-top: 10px;
-}
-
-#loginBox h4 {
-    margin-left: 2%;
-}
-
-.todo {
-    margin-top: 40px;
-}
-
-#bottom {
-    height: 25px;
-    width: 100%;
-    margin-top: 897px;
-    padding-top: 5px;
-    background-color: #36454f;
-    bottom: 0px;
-    margin-bottom: 0px;
-    position: fixed;
-}
-
-#contact {
-    text-decoration: none;
-    color: white;
-    margin-left: 50px;
-    font-size: 15px;
-    margin-top: 8px;
-}
-
-#contactBox {
-    color: white;
-    position: absolute;
-    bottom: 30px;
-    background-color: #36454f;
-    border: 2px solid lightyellow;
-    padding-right: 20px;
-    margin-left: 2px;
-    visibility: hidden;
-}
-
-#contactBox p, #contactBox h3 {
-    padding-left: 20px;
-}
-
-#contactBox p a {
-    text-decoration: none;
-    color: white;
-}
 
 @media screen and (max-width: 479px) { /* Mobile portrait */
 
@@ -148,6 +21,113 @@ h2 {
 
 @media screen and (min-width: 1600px) { /* Browser */
 
-
+    body {
+        margin: 0px;
+    }
+    
+    #left {
+        width: 50%;
+        height: 100%;
+        min-height: 800px;
+        background-color: lightyellow;
+        float: left;
+    }
+    
+    #right {
+        width: 50%;
+        height: 100%;
+        min-height: 800px;
+        background-color: #36454f;
+        float: right;
+    }
+    
+    h1, h2 {
+        margin-left: 4%;
+        color: white;
+    }
+    
+    #smallLogo {
+        width: 10%;
+        margin-left: 4%;
+        margin-top: 25%;
+    }
+    
+    #largeLogo {
+        width: 50%;
+        margin: 23%;
+        margin-top: 20%;
+    }
+    
+    h1 {
+        font-size: 60px;
+    }
+    
+    h2 {
+        font-size: 35px;
+    }
+    
+    #login, #signup {
+        background-color: #36454f;
+        text-decoration: none;
+        color: lightyellow;
+        font-size: 20px;
+        border-radius: 25px;
+        border: 2px solid lightyellow;
+        margin-top: 30px;
+        margin-left: 6%;
+        padding-left: 160px;
+        padding-right: 160px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    #login:hover, #signup:hover {
+        color: #36454f;
+        background-color: lightyellow;
+    }
+    
+    .todo {
+        margin-top: 40px;
+    }
+    
+    #bottom {
+        height: 25px;
+        width: 100%;
+        margin-top: 897px;
+        padding-top: 5px;
+        background-color: #36454f;
+        bottom: 0px;
+        margin-bottom: 0px;
+        position: fixed;
+    }
+    
+    #contact {
+        padding-top: 6px;
+        text-decoration: none;
+        color: white;
+        margin-left: 50px;
+        font-size: 15px;
+        margin-top: 8px;
+    }
+    
+    #contactBox {
+        color: white;
+        position: absolute;
+        bottom: 30px;
+        background-color: #36454f;
+        border: 2px solid lightyellow;
+        padding-right: 20px;
+        margin-left: 2px;
+        visibility: hidden;
+    }
+    
+    #contactBox p, #contactBox h3 {
+        padding-left: 20px;
+    }
+    
+    #contactBox p a {
+        text-decoration: none;
+        color: white;
+    }
     
 }
