--- a/styles/index.css
+++ b/styles/index.css
@@ -66,28 +66,18 @@
         font-size: 35px;
     }
     
-    #login, #signup {
-        background-color: #36454f;
-        text-decoration: none;
-        color: lightyellow;
+    .choices {
+        text-align: center;
         font-size: 20px;
-        border-radius: 25px;
+        color: lightyellow;
+        margin-top: 40px;
         border: 2px solid lightyellow;
+        border-radius: 25px;
         margin-top: 30px;
         margin-left: 6%;
-        padding-left: 160px;
-        padding-right: 160px;
         padding-top: 10px;
         padding-bottom: 10px;
-    }
-    
-    #login:hover, #signup:hover {
-        color: #36454f;
-        background-color: lightyellow;
-    }
-    
-    .todo {
-        margin-top: 40px;
+        width: 450px;
     }
     
     #bottom {
@@ -129,5 +119,4 @@
         text-decoration: none;
         color: white;
     }
-    
 }
